--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
-		<meta charset="utf-8">
-		<title>Cellphone 3D</title>
-		<link id="stylesheet" rel="stylesheet" href="css/main.css" type="text/css" />
+		<!-- Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <!-- Page Title -->
+    <title>Cellphone 3D - dmsanchez86</title>
+
+    <!-- Stylesheets Lybraries -->
+    <link rel="stylesheet" type="text/css" href="css/main.css?ver=vxr67">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png" id="favicon">
 	</head>
 
 	<body class="body portrait">
