add button back

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
           </div>
         </div>
       </div>
+
+      <a href="../" class="back_button">
+        <img src="img/back.png">
+        <div class="message">Back</div>
+      </a>
       
       <div class="on_off inactive" state="off">On / Off</div>
       
