add new functionality

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="top"></div>
         <div class="left"></div>
         <button class="button_start"></button>
+        <button class="button_test" title="Test your page here"></button>
       </div>
       
       <div class="panel_left">
