--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="Daniel Mauricio Sanchez Avila" />
+    <meta name="keywords" content="daniel,mauricio,dmsanchez86,daniel mauricio,daniel mauricio sanchez,portfolio,sitio web,website,cellphone 3d,cellphone in css, phone 3d, celular en 3d,telefono en 3d," />
+    <meta name="description" content="Daniel Mauricio Cellphone 3D, made in css3 " />
+    <meta name="Resource-type" content="Document" />
+    <meta name="Revisit-after" content="2 days" />
+    <meta name="robots" content="ALL" />
 
     <!-- Page Title -->
     <title>Cellphone 3D - dmsanchez86</title>
@@ -58,6 +64,13 @@
       <div class="on_off inactive" state="off">On / Off</div>
       
       <script type="text/javascript" src="js/waves.js"></script>
-      
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-62994212-3', 'auto');
+        ga('send', 'pageview');
+      </script>
 	</body>
 </html>
